kubernetes/ingress/alb-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
        - name: aws-load-balancer-controller
          image: public.ecr.aws/eks/aws-load-balancer-controller:v2.6.1
          args:
            - --cluster-name=${CLUSTER_NAME}
            - --ingress-class=${INGRESS_CLASS}
            - --aws-region==${DEF_REGION}
